--- a/www/share.html
+++ b/www/share.html
@@ -27,6 +27,6 @@
 <body>
   <h1>Tap anywhere to share this profile</h1>
 
-  <script src="./assets/orghandler.js"></script>
+  <script src="./assets/share.js"></script>
 </body>
 </html>
