Update title and heading in share.html

--- a/www/share.html
+++ b/www/share.html
@@ -2,30 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Share This Profile</title>
-  <style>
-    body {
-      font-family: system-ui, sans-serif;
-      background: #f9f9f9;
-      color: #333;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      text-align: center;
-      padding: 1rem;
-      cursor: pointer;
-      user-select: none;
-    }
-    h1 {
-      font-size: 1.5rem;
-      max-width: 400px;
-    }
-  </style>
+  <title>Zaorinu's Space!</title>
 </head>
 <body>
-  <h1>Tap anywhere to share this profile</h1>
+  <h1>Tap anywhere to share me to your friends :)</h1>
 
   <script src="./assets/share.js"></script>
 </body>
