add domains list and prettify main readme

--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Security-Policy"
           content="default-src 'unsafe-inline'; style-src 'unsafe-inline'; img-src data:;">
     <meta http-equiv="refresh" content="0;url=https://github.com/zaorinu">
-    <title>Getting you into my profile!</title>
+    <title>Zaorinu's Space!</title>
   </head>
 
   <body>
