--- a/www/share.html
+++ b/www/share.html
@@ -7,6 +7,10 @@
 <body>
   <h1>Tap anywhere to share me to your friends :)</h1>
 
+  <noscript>
+    <p>Please enable JavaScript to use the sharing feature.</p>
+  </noscript>
+
   <script src="./assets/share.js"></script>
 </body>
 </html>
